<resources>
    <string name="app_name">Medspace_v1</string>
    //WelcomePage = wlpg_
    <string name="wlpg_login_btn">Continue</string>
    <string name="wlpg_welcome">Welcome!</string>
    <string name="wlpg_medspace">MedSpace</string>
    <string name="wlpg_to">To </string>
    <string name="wlpg_a_medical_record">A Medical Record</string>
    <string name="wlpg_maintenance_app">Maintenance App</string>
    <string name="wlpg_having_issues_logging_in">Having issues Logging in?</string>
    <string name="wlpg_contact_us">Contact Us</string>
    <string name="wlpg_credits_btn">Credits Button</string>
    //MainLoginPage = mlpg_
    <string name="mnlgpg_admin_text">Admin?</string>
    <string name="mnlgpg_other_logins">Other Logins :</string>
    <string name="mnlgpg_having_issues_logging_in">Having issues Logging in?</string>
    <string name="mnlgpg_contact_us">Contact Us</string>
    <string name="mnlgpg_admin_login_button">Admin Login</string>
    <string name="mnlgpg_staff_login_button">Staff</string>
    <string name="mnlgpg_patient_login_button">Patient</string>
    <string name="mnlgpg_credits_btn">Credits Button</string>
    //AdminLoginPage = admin_lgpg_
    <string name="admin_lgpg_hello_there">Hello There!</string>
    <string name="admin_lgpg_admin_top_text">Admin</string>
    <string name="admin_lgpg_having_issues_logging_in">Having issues Logging in?</string>
    <string name="admin_lgpg_contact_us">Contact Us</string>
    <string name="admin_lgpg_need_help">Need Help?</string>
    <string name="admin_lgpg_login_btn">Login</string>
    <string name="admin_lgpg_username_hint">username</string>
    <string name="admin_lgpg_password_hint">password</string>
    <string name="admin_credits_btn">Credits Button</string>
    //StaffLoginPage = staff_lgpg_
    <string name="staff_lgpg_hello_there">Hello There!</string>
    <string name="staff_lgpg_staff_top_text">Staff</string>
    <string name="staff_lgpg_having_issues_logging_in">Having issues Logging in?</string>
    <string name="staff_lgpg_contact_us">Contact Us</string>
    <string name="staff_lgpg_need_help">Need Help?</string>
    <string name="staff_lgpg_login_btn">Login</string>
    <string name="staff_lgpg_username_hint">username</string>
    <string name="staff_lgpg_password_hint">password</string>
    <string name="staff_credits_btn">Credits Button</string>
    //PatientLoginPage = pat_lgpg_
    <string name="pat_lgpg_hello_there">Hello There!</string>
    <string name="pat_lgpg_pat_top_text">Patient</string>
    <string name="pat_lgpg_having_issues_logging_in">Having issues Logging in?</string>
    <string name="pat_lgpg_contact_us">Contact Us</string>
    <string name="pat_lgpg_need_help">Need Help?</string>
    <string name="pat_lgpg_login_btn">Login</string>
    <string name="pat_lgpg_username_hint">username</string>
    <string name="pat_lgpg_password_hint">password</string>
    <string name="pat_credits_btn">Credits Button</string>
    //test field
    <string name="test_contactus">Contact Us Working!</string>
    <string name="test_credits">Credits Working</string>
    <string name="test_all">Under Construction!!!!</string>
    //AdminHome = admin_home_
    <string name="admin_home_welcome_back">Welcome Back!</string>
    <string name="admin_home_add_a_new_staff">Add a New Staff</string>
    <string name="admin_home_modify_or_delete">Modify/Delete a Staff/Patient</string>
    <string name="admin_home_add_new_patient">Add a new Patient</string>
    <string name="admin_home_view_staff_and_patient">View Staff and Patient`s Data</string>
    <string name="admin_home_having_issues">Having Issues?</string>
    <string name="admin_home_contact_us">Contact Us</string>
    <string name="admin_home_add_button">Add</string>
    <string name="admin_home_next_button">Next</string>
    <string name="admin_home_view_button">View</string>
    //StaffHome = staff_home_
    <string name="staff_home_welcome_back">Welcome Back!</string>
    <string name="staff_home_add_new_patient">Add a new Patient</string>
    <string name="staff_home_add_button">Add</string>
    <string name="staff_home_check_a_patient">Check a Patient`s Medical Data</string>
    <string name="staff_home_view_button">View</string>
    <string name="staff_home_having_issues">Having Issues?</string>
    <string name="staff_home_contact_us">Contact Us</string>
    //PatientHome = pat_home_
    <string name="pat_home_welcome_back">Welcome Back!</string>
    <string name="pat_home_enter_your_aadhaar">Enter Your Aadhaar No.</string>
    <string name="pat_home_to_view_your_data">To View Your Medical Data :</string>
    <string name="pat_home_hint_aadhaar">Aadhaar Number</string>
    <string name="pat_home_search_button">Search</string>
    <string name="pat_home_having_issues">Having Issues?</string>
    <string name="pat_home_contact_us">Contact Us</string>
    //AddPatient1 = add_pat1_
</resources>