<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_bg"
    tools:context=".StaffHome">

    <Button
        android:id="@+id/staff_home_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_red"
        android:text="@string/admin_lgpg_contact_us"
        android:textColor="@color/white"
        app:backgroundTint="#E00065"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/staff_home_having_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/admin_home_having_issues"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/staff_home_contact_us" />

    <TextView
        android:id="@+id/staff_home_add_new_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/staff_home_add_new_patient"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staff_home_art" />

    <TextView
        android:id="@+id/staff_home_check_a_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/staff_home_check_a_patient"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staff_home_add_button" />

    <TextView
        android:id="@+id/staff_home_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/staff_home_welcome_back"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/staff_home_back_button"
        android:layout_width="33dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/backbtn_white"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/staff_home_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:background="@drawable/dark_button_small"
        android:text="@string/staff_home_view_button"
        app:backgroundTint="#534FA8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staff_home_check_a_patient" />

    <Button
        android:id="@+id/staff_home_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/dark_button_small"
        android:text="@string/staff_home_add_button"
        app:backgroundTint="#534FA8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/staff_home_add_new_patient" />

    <ImageView
        android:id="@+id/staff_home_art"
        android:layout_width="125dp"
        android:layout_height="207dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/test_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/staff_home_welcome_back"
        app:srcCompat="@drawable/staff_home_art" />
</androidx.constraintlayout.widget.ConstraintLayout>